@@ -136,6 +136,7 @@
     .screenshot_a {
       text-decoration:none;
       color:grey;
+      -khtml-user-drag:none;
     }
     
     #installed_icon {       
