@@ -146,6 +146,7 @@
     #featured_link{
       clear:left;
       margin: 0.3em 0 0 0;
+      -khtml-user-drag:none;
     }
     a.button{ 
       font-size:1.2em;
@@ -188,6 +189,9 @@
    
     .category_td p { font-size:90%; text-align:center; }
     .no_drag { -khtml-user-drag:none; }
+    
+    /* make images not draggable in the categories view */
+    img { -khtml-user-drag:none; }
     
   
  </style>
